--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">My First App</string>
+    <string name="Name">Name</string>
+    <string name="Email">Email</string>
+    <string name="Password">Password</string>
+    <string name="Retype_Password">Retype_Password</string>
+    <string name="Submit">Submit</string>
+    <string name="Cancel">Cancel</string>
 </resources>
